--- a/blog.html
+++ b/blog.html
@@ -158,19 +158,19 @@
     <ul>
       <li>
         <a href="https://www.instagram.com/psi.haianecastro?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
-          <img src="fotos/insta.png" alt="Instagram">
+          <img src="fotos/insta.png" alt="Instagram" class="redes">
           <span>Instagram</span>
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="fotos/x.png" alt="X">
+          <img src="fotos/x.png" alt="X"  class="redes">
           <span>X</span>
         </a>
       </li>
       <li>
         <a href="#">
-          <img src="fotos/what.png" alt="WhatsApp">
+          <img src="fotos/what.png" alt="WhatsApp"  class="redes">
           <span>WhatsApp</span>
         </a>
       </li>
