--- a/index.html
+++ b/index.html
@@ -57,22 +57,23 @@
           </div>
         </article>
       </section>
-
+ 
       <section class="module parallax parallax-2">
+        <div class="oi">
         <h2 class="tituloprincipal2">
           "Não podemos mudar, não nos podemos afastar do que somos enquanto
           não aceitarmos profundamente o que somos".
         </h2>
         <p class="bannerin">-Carl rogers-</p>
-      </section>
-
+      </div>
+    </section>
       <section class="module content">
         <section class="servicos">
           <h2 class="servicos" id="servicos">Serviços</h2>
           <div class="cards-container">
             <div class="card">
               <img src="fotos/02.png" alt="Terapia Psicanálise" class="cardimg" />
-              <h2>Terapia para Ansiedade</h2>
+              <h2 class="cardh">Terapia para Ansiedade</h2>
               <p class="cardtext">
                 A terapia para ansiedade ajuda a identificar e lidar com
                 gatilhos de preocupação e tensão, utilizando técnicas como a
@@ -84,7 +85,7 @@
             </div>
             <div class="card">
               <img src="fotos/pis2.png" alt="Terapia Familiar" class="cardimg" />
-              <h2>Depressão</h2>
+              <h2 class="cardh">Depressão</h2>
               <p class="cardtext">
                 A terapia para depressão oferece apoio para superar
                 sentimentos de tristeza e desânimo, utilizando técnicas como a
@@ -95,7 +96,7 @@
             </div>
             <div class="card">
               <img src="fotos/pis3.png" alt="Terapia Humanista" class="cardimg" />
-              <h2>Adolescentes e Adultos</h2>
+              <h2 class="cardh">Adolescentes e Adultos</h2>
               <p class="cardtext">
                 A terapia para adolescentes e adultos oferece apoio para lidar
                 com os desafios emocionais de cada fase da vida, como
