--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
  
       <section class="module parallax parallax-2">
         <div class="oi">
-        <h2 class="tituloprincipal2">
-          "Não podemos mudar, não nos podemos afastar do que somos enquanto
-          não aceitarmos profundamente o que somos".
-        </h2>
-        <p class="bannerin">-Carl rogers-</p>
-      </div>
-    </section>
+          <h2 class="tituloprincipal2">
+            "Não podemos mudar, não nos podemos afastar do que somos enquanto
+            não aceitarmos profundamente o que somos".
+          </h2>
+          <p class="bannerin">-Carl Rogers-</p>
+        </div>
+      </section>
+      
       <section class="module content">
         <section class="servicos">
           <h2 class="servicos" id="servicos">Serviços</h2>
@@ -117,14 +118,14 @@
 
       <section class="module parallax parallax-3">
         <h2 class="tituloprincipal2">Quem olha para fora sonha, quem olha para dentro desperta.</h2>
-        <p class="bannerin">-Carl Jung-</p>
+        <p class="bannerin1">-Carl Jung-</p>
       </section>
       </section>
 
       <section class="module content">
         <div class="container2">
           <div class="image-section2">
-            <img src="fotos/02.png" alt="Mesa decorada com flores azuis">
+            <img src="fotos/02.png" alt="Mesa decorada com flores azuis" class="imgblog">
           </div>
           <div class="text-section2">
             <h1 class="centro">Meu Blog</h1>
